<resources>
    <string name="app_name">Mysuru-Commute</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_network">No Network</string>
    <string name="no_network_title">Wake up your connection!</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="no_network_sub_text">Your internet seems too slow to reach our server</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="search">search</string>

</resources>
