<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.venkateshkashyap.mysuru_commute.fragments.BusRoutesBySrcDestFragment">

    <AutoCompleteTextView
        android:id="@+id/auto_complete_txt_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="100dp"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/textbox_background_top"
        android:gravity="center_vertical"
        android:hint="@string/source"
        android:padding="@dimen/dp_5" />


    <AutoCompleteTextView
        android:id="@+id/auto_complete_txt_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auto_complete_txt_source"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/textbox_background_bottom"
        android:gravity="center_vertical"
        android:hint="@string/destination"
        android:padding="@dimen/dp_5" />


    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auto_complete_txt_destination"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/search"
        android:focusable="true" />
</RelativeLayout>
