<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/black_overlay"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_50"
        android:background="@android:color/white"
        android:visibility="visible"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/img_error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:tint="@color/colorPrimary"
            android:src="@drawable/ic_sleep"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            android:layout_margin="@dimen/dp_15"
            android:gravity="center"
            android:layout_below="@+id/img_error_image"
            android:textSize="@dimen/sp_16"
            android:textColor="@android:color/black"
            android:text="@string/no_network_title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            android:gravity="center"
            android:layout_below="@+id/text_title"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_757575"
            android:text="@string/no_network_sub_text"/>

        <TextView
            android:id="@+id/text_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_below="@+id/text_sub_title"
            android:textSize="@dimen/sp_14"
            android:layout_marginBottom="@dimen/dp_25"
            android:textColor="?attr/colorPrimary"
            android:text="@string/try_again"/>

    </RelativeLayout>

</RelativeLayout>